# learn_cmake

./: .gitignore  LICENSE
Step1/: CMakeLists.txt  test.cxx  test_config.h.in  tutorial.cxx
Step2/: CMakeLists.txt
